--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/gotom-io/gotom-insomnia-hmac"
+    "url": "git+https://github.com/gotom-io/gotom-insomnia-hmac.git"
   },
   "dependencies": {
     "crypto-js": "~3.3.0"
